--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
   <body>
     <header class="page-header">
       <div class="container">
+        <a class="header-email" href="wdalexpetrov@gmail.com">wdalexpetrov@gmail.com</a>
+        <a class="header-phone" href="+79871857434">+79871857434</a>
           Контакты в шапке
       </div>
     </header>
 
     <section class="hero-image">
       <div class="container">
-      <h1 class="heading">Неопознанный Енотт</h1>
+      <h1 class="heading">Неопознанный Енот</h1>
       <p>Junior верстальщик</p>
       </div>
     </section>
 
     <section class="intro">
+      <figure class="user-image">
+    <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+      </figure>
+
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
@@ -35,8 +41,12 @@
       <div class="container">
 
       <h2 class="subheading">Мои работы</h2>
+      <figure class="project-image">
+      <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+      </figure>
 
       <h3>Сайт инструктора Кекса</h3>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -46,6 +56,8 @@
 
     <footer class="page-footer">
       <div class="container">
+        <a class="footer-email" href="wdalexpetrov@gmail.com">wdalexpetrov@gmail.com</a>
+        <a class="footer-phone" href="+79871857434">+79871857434</a>
       Контакты в подвале
       </div>
     </footer>
